objects/ssot__ClaimCoverage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimCoverageStatus__c</fullName>
        <label>Claim Coverage Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimCoverage_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCoverage_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimCoverage_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>ClaimCoverage_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimItemId__c</fullName>
        <label>Claim Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimParticipantId__c</fullName>
        <label>Claim Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpenseReserveAmount__c</fullName>
        <label>Expense Reserve Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Coverage Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyAssetId__c</fullName>
        <label>Insurance Policy Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyCoverageId__c</fullName>
        <label>Insurance Policy Coverage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyParticipantId__c</fullName>
        <label>Insurance Policy Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LossReserveAmount__c</fullName>
        <label>Loss Reserve Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128253417_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCoverage_ClaimParticipantId_map_rel</label>
        <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
        <relationshipLabel>ClaimCoverage_ClaimParticipantId_map_rel</relationshipLabel>
        <relationshipName>rel_1723128253417_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128261197_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCoverage_ClaimItemId_map_ClaimI_rel</label>
        <referenceTo>ssot__ClaimItem__dlm</referenceTo>
        <relationshipLabel>ClaimCoverage_ClaimItemId_map_ClaimI_rel</relationshipLabel>
        <relationshipName>rel_1723128261197_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128388771_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCoverage_InsurancePolicyAssetId_rel</label>
        <referenceTo>ssot__InsurancePolicyAsset__dlm</referenceTo>
        <relationshipLabel>ClaimCoverage_InsurancePolicyAssetId_rel</relationshipLabel>
        <relationshipName>rel_1723128388771_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>